udplite: add define support for UDP-Lite protocol
This patch add define support for UDP-Lite protocol. Based on
RFC3828:
  - RFC3828: The Lightweight User Datagram Protocol (UDP-Lite)

Signed-off-by: Wei Yongjun <weiyj.lk@gmail.com>

--- a/lib/Pz/Makefile
+++ b/lib/Pz/Makefile
@@ -2,6 +2,7 @@ LIBS = libPz.a
 OBJS =	DmObject.o ItPosition.o McAH.o McARP.o McAlgorithm.o	\
 	McDHCPv6.o McDHCPv4.o McDNS.o McESP.o McEther.o McICMPv4.o	\
 	McICMPv6.o McIGMP.o McIKE.o McIPv4.o McIPv6.o McInit.o	\
+	McUDPLite.o	\
 	McMLDv2.o McMobility.o McNoNext.o McNull.o McObject.o	\
 	McRIPng.o McRR.o McSIP.o McSNMP.o McSub.o McTCP.o	\
 	McUDP.o McVRRP.o MfAlgorithm.o MmChecksum.o MmData.o	\
