remotes: add racontrol.rmt to support control radvd under linux
This patch add racontrol.rmt to support control radvd under
linux. The config for prefix and route is disabled in this
version, will be fixed later.

Signed-off-by: Wei Yongjun <weiyj.lk@gmail.com>

--- a/bin/remotes/linux-v6/Makefile
+++ b/bin/remotes/linux-v6/Makefile
@@ -48,7 +48,8 @@ REMOTES=clearnc.rmt clearprefix.rmt cleardefr.rmt reboot.rmt \
 	ipsecClearAll.rmt ipsecEnable.rmt ipsecSetSPD.rmt ipsecSetSAD.rmt \
 	ikeClearAll.rmt ikeConfig.rmt ikeDump.rmt \
 	ikeInitiate.rmt ikeStart.rmt ikeStop.rmt ikeTunnel.rmt \
-	rcommand.rmt rcommandasync.rmt mtuconfig.rmt getfile.rmt putfile.rmt
+	rcommand.rmt rcommandasync.rmt mtuconfig.rmt getfile.rmt putfile.rmt \
+	racontrol.rmt
 
 .PHONY: all depend clean
 all:
