make: make v6eval availably under linux
This patch make v6eval availably under linux, such as
RHEL, CentOS, Fedora.

Signed-off-by: Wei Yongjun <weiyj.lk@gmail.com>

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,4 +1,7 @@
-SUBDIR=pktbuf pktctl pktsend pktrecv checker autorun pktlint remotes dhgen dhcomp prfcomp ivcomp x509dec sigcomp file2hex indexgen
+SUBDIRS=pktbuf pktctl pktsend pktrecv checker autorun pktlint remotes dhgen dhcomp prfcomp ivcomp x509dec sigcomp file2hex indexgen
 
-.MAIN: depend all
-.include <bsd.subdir.mk>
+.PHONY: all clean install
+all clean install:
+	@for subdir in $(SUBDIRS); do \
+		$(MAKE) -C $$subdir $@; \
+	done
