--- a/bin/indexgen/Makefile
+++ b/bin/indexgen/Makefile
@@ -1,7 +1,4 @@
+SRCS = indexgen.pl
+PROG = indexgen
 
-beforeinstall:
-	${INSTALL} -c -o ${BINOWN} -g ${BINGRP} -m ${BINMODE} \
-		${.CURDIR}/indexgen.pl ${DESTDIR}${BINDIR}/indexgen
-
-.include <bsd.prog.mk>
-
+include ../Makefile.scripts
