--- a/bin/pktlint/Makefile
+++ b/bin/pktlint/Makefile
@@ -1,7 +1,5 @@
+SRCS = pktlint.pl
+PROG = pktlint
 
-beforeinstall:
-	${INSTALL} -c -o ${BINOWN} -g ${BINGRP} -m ${BINMODE} \
-		${.CURDIR}/pktlint.pl ${DESTDIR}${BINDIR}/pktlint
-
-.include <bsd.prog.mk>
+include ../Makefile.scripts
 
