--- a/bin/pktrecv/Makefile
+++ b/bin/pktrecv/Makefile
@@ -1,14 +1,5 @@
-CXXFLAGS+=	-I${Cm} -I${Pz} -I${pkt} -I/usr/local/include
-LDFLAGS +=	-L${Cm} -L${Pz} -L${pkt} -L/usr/local/lib
-LDADD+=	-lPkt -lPz -lCm  -lcrypto
-SRCS=	pktrecv.cc 
-PROG_CXX=	pktrecv
-PROG=	${PROG_CXX}
-NOMAN=
-NO_MAN=
-CLEANFILES+=	.depend
+SRCS = pktrecv.cc
+PROG = pktrecv
 
-.include "../Makefile.inc"
-.include "bsd.prog.mk"
+include ../Makefile.inc
 
-$(PROG): ${Cm}/libCm.a ${Pz}/libPz.a ${pkt}/libPkt.a
