--- a/bin/remotes/manual/Makefile
+++ b/bin/remotes/manual/Makefile
@@ -41,7 +41,6 @@
 # THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-PREFIX=/usr/local/v6eval
 RMTDIR=$(PREFIX)/bin/manual
 REMOTES=	cleardefr.rmt		\
 		clearmtu.rmt		\
@@ -101,11 +100,14 @@ REMOTES=	cleardefr.rmt		\
 		tunnel.rmt		\
 		useTempAddr.rmt
 
+.PHONY: all depend clean
 all:
 depend:
 clean:
 
+.PHONY: install
 install:
 	install -d -o bin -g bin -m 755 $(PREFIX)/bin
 	install -d -o bin -g bin -m 755 $(RMTDIR)
 	install -c -o bin -g bin -m 555 $(REMOTES) $(RMTDIR)
+
