--- a/script/Makefile
+++ b/script/Makefile
@@ -1,2 +1,8 @@
-SUBDIR=pmod
-.include <bsd.subdir.mk>
+SUBDIRS=pmod
+
+.PHONY: all clean install
+all clean install:
+	@for subdir in $(SUBDIRS); do \
+		$(MAKE) -C $$subdir $@; \
+	done
+
