--- a/script/pmod/Makefile
+++ b/script/pmod/Makefile
@@ -1,2 +1,8 @@
-SUBDIR=V6evalTool V6evalRemote V6evalCommon
-.include <bsd.subdir.mk>
+SUBDIRS = V6evalTool V6evalRemote V6evalCommon
+
+.PHONY: all clean install
+all clean install:
+	@for subdir in $(SUBDIRS); do \
+		$(MAKE) -C $$subdir $@; \
+	done
+
